<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#EEEEEE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:text="@string/selectParentTicket"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/required"
                android:textSize="12sp" />
            />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinnerParentTicket"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:nextFocusForward="@+id/spinner_help"
                android:entries="@array/spinnerAssignTo"
                android:hint="@string/SelectPriority"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#EEEEEE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold" />
            />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/titleEditText"
                android:hint="@string/hintsForTitle"
                android:inputType="text"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#EEEEEE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:text="@string/reasonForMerging"
                android:textSize="16sp"
                android:textStyle="bold" />
            />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/reasonForMerging"
                android:hint="@string/reasonForMergingHint"
                android:inputType="text"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


