<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="co.helpdesk.faveo.pro.frontend.activities.HelpSection">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyMaterialTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/MyMaterialTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_arrow_back_black_24dp" />

                <TextView
                    android:id="@+id/titlesave"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/other"
                    android:textColor="@color/theme"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_alignTop="@+id/imageViewBack"
                    android:layout_toRightOf="@+id/imageViewBack"
                    android:layout_toEndOf="@+id/imageViewBack" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/faveo">

        </View>
    </android.support.design.widget.AppBarLayout>
    <TextView
        android:id="@+id/multipleticket"
        android:padding="18dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/howtoselectmultipleticket"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/faveo">

    </View>
    <TextView
        android:id="@+id/changestatus"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/changeStatus"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/faveo">

    </View>
    <TextView
        android:id="@+id/assignmultipleticket"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/assignMultipleTicket"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/faveo">

    </View>
    <TextView
        android:id="@+id/mergingticket"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/mergingmultipleTickets"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/faveo">

    </View>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/faveo">

    </View>
    <TextView
        android:id="@+id/givingFeedback"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/submitFeedback"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/faveo">

    </View>


</LinearLayout>
