<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <agency.tango.android.avatarview.views.AvatarView
        android:id="@+id/imageView_collaborator"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:transitionName="@string/blue_name"
        android:layout_centerVertical="true"
        android:src="@drawable/default_pic"
        android:background="@drawable/rounded_textview"/>

    <TextView
        android:id="@+id/textView_collaborator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/imageView_collaborator"
        android:fontFamily="sans-serif-bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/dummy_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_client_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_collaborator_name"
        android:layout_below="@+id/textView_collaborator_name"
        android:alpha=".54"
        android:drawablePadding="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:text="@string/dummy_mail_id"
        android:textColor="@color/black"
        android:textSize="16sp" />



    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/grey_200" />




</RelativeLayout>