<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="co.helpdesk.faveo.pro.frontend.activities.HelpSection">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="9dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/login"
                android:tint="@color/faveo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_toEndOf="@+id/imageView3"
                android:text="@string/login"
                android:textSize="18sp"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView5"
                android:text="@string/logginginto" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/faveo"></View>
        <RelativeLayout
            android:id="@+id/tickets"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="9dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ticket"
                android:tint="@color/faveo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_toEndOf="@+id/imageView4"
                android:text="@string/ticket"
                android:textSize="18sp"
                android:id="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView6"
                android:text="@string/managingTickets" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/faveo">

        </View>
        <RelativeLayout
            android:id="@+id/userandagent"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="9dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/userandagent"
                android:tint="@color/faveo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_toEndOf="@+id/imageView7"
                android:text="@string/userAndAgent"
                android:textSize="18sp"
                android:id="@+id/textView8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView8"
                android:text="@string/userDirectory" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/faveo"></View>
        <RelativeLayout
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="9dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/otherfeature"
                android:tint="@color/faveo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_toEndOf="@+id/imageView9"
                android:text="@string/other"
                android:textSize="18sp"
                android:id="@+id/textView9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView9"
                android:text="@string/someOtheroptions" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/faveo"></View>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context="com.android.faveo.SettingsActivity">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:fontFamily="sans-serif-light"-->
        <!--android:text="@string/crash_reports"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="20sp" />-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="72dp"-->
        <!--android:gravity="center_vertical">-->

        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:alpha="0.6"-->
        <!--android:text="@string/send_crash_reports"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <!--<android.support.v7.widget.SwitchCompat-->
        <!--android:id="@+id/switch_crash_reports"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:checked="true"-->
        <!--app:theme="@style/SwitchStyle" />-->

        <!--</LinearLayout>-->

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/rectanglereachout"
            android:text="@string/reachOutToUs"/>
    </LinearLayout>
</LinearLayout>