<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/client"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:paddingBottom="4dp"
    android:backgroundTint="@color/colorAccent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="4dp"
    android:focusable="true"
    android:background="@drawable/custom_ripple">

    <!--<TextView-->
        <!--android:id="@+id/textView_client_id"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true" />-->

    <ImageView
        android:id="@+id/imageView_default_profile"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:transitionName="@string/blue_name"
        android:layout_centerVertical="true"
        android:src="@drawable/default_pic"
        android:background="@drawable/rounded_textview"/>






    <TextView
        android:id="@+id/textView_client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/imageView_default_profile"
        android:fontFamily="sans-serif-bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/dummy_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_client_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_client_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/imageView_default_profile"
        android:alpha=".54"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:text="@string/dummy_mail_id"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_client_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_client_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@+id/imageView_default_profile"
        android:alpha=".54"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:text="@string/dummy_num"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/grey_200" />

</RelativeLayout>